--- a/flamingo/auto_plotter/star_formation_rates.yml
+++ b/flamingo/auto_plotter/star_formation_rates.yml
@@ -14,6 +14,7 @@ stellar_mass_sfr_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e9
@@ -25,6 +26,7 @@ stellar_mass_sfr_30:
     title: Stellar Mass-Star Formation Rate (30 kpc Stellar Mass)
     caption: All galaxies, including those deemed to be passive (below 0.01 / Gyr sSFR), are included in the median line.
     section: Star Formation Rates
+    show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassStarFormationRate/Davies2016_z0p1.hdf5
 
@@ -44,6 +46,7 @@ stellar_mass_sfr_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e9
@@ -58,7 +61,7 @@ stellar_mass_sfr_100:
   observational_data:
     - filename: GalaxyStellarMassStarFormationRate/Davies2016_z0p1.hdf5
 
-stellar_mass_specific_sfr_100:
+stellar_mass_specific_sfr_active_only_100:
   type: "2dhistogram"
   selection_mask: "derived_quantities.is_active_100_kpc"
   comment: "Active only"
@@ -77,6 +80,7 @@ stellar_mass_specific_sfr_100:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e9
@@ -88,14 +92,14 @@ stellar_mass_specific_sfr_100:
       value: 1.01e-11
       units: 1 / year
   metadata:
-    title: Specific Star Formation Rate - Stellar Mass (100 kpc)
+    title: Specific Star Formation Rate - Stellar Mass (100 kpc) for active galaxies
     caption: Only active galaxies (threshold is above 0.01 / Gyr sSFR) are included in the median line.
     section: Star Formation Rates
   observational_data:
     - filename: GalaxyStellarMassSpecificStarFormationRate/Bauer2013_StarForming.hdf5
     - filename: GalaxyStellarMassSpecificStarFormationRate/Chang2015.hdf5
 
-stellar_mass_specific_sfr_30:
+stellar_mass_specific_sfr_active_only_30:
   type: "2dhistogram"
   legend_loc: "lower left"
   selection_mask: "derived_quantities.is_active_30_kpc"
@@ -114,6 +118,7 @@ stellar_mass_specific_sfr_30:
   median:
     plot: true
     log: true
+    adaptive: true
     number_of_bins: 30
     start:
       value: 1e9
@@ -125,9 +130,10 @@ stellar_mass_specific_sfr_30:
       value: 1.01e-11
       units: 1 / year
   metadata:
-    title: Specific Star Formation Rate - Stellar Mass (30 kpc)
+    title: Specific Star Formation Rate - Stellar Mass (30 kpc) for active galaxies
     caption: Only active galaxies (threshold is above 0.01 / Gyr sSFR) are included in the median line.
     section: Star Formation Rates
+    show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassSpecificStarFormationRate/Bauer2013_StarForming.hdf5
     - filename: GalaxyStellarMassSpecificStarFormationRate/Chang2015.hdf5
@@ -165,6 +171,7 @@ halo_mass_specific_sfr_30:
     title: Specific Star Formation Rate (30 kpc) - Halo Mass
     caption: Only active galaxies (threshold is above 0.01 / Gyr sSFR) are included in the median line.
     section: Star Formation Rates
+    show_on_webpage: false
 
 halo_mass_specific_sfr_100:
   type: "2dhistogram"
@@ -230,6 +237,7 @@ halo_mass_sfr_30_halo_mass:
     title: Star Formation Rate divided by Halo Mass (30 kpc) - Halo Mass
     caption: Only active galaxies (threshold is above 0.01 / Gyr sSFR) are included in the median line
     section: Star Formation Rates
+    show_on_webpage: false
 
 halo_mass_sfr_100_halo_mass:
   type: "2dhistogram"
@@ -292,10 +300,12 @@ stellar_mass_passive_fraction_30:
     title: Passive Fraction - Stellar Mass (30 kpc)
     caption: A galaxy is determined as being passive if it has a sSFR below 0.01 / Gyr.
     section: Star Formation Rates
+    show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassPassiveFraction/Gilbank2010.hdf5
     - filename: GalaxyStellarMassPassiveFraction/Moustakas2013.hdf5
     - filename: GalaxyStellarMassPassiveFraction/Behroozi2019.hdf5
+
 
 stellar_mass_passive_fraction_100:
   type: "2dhistogram"
@@ -326,6 +336,83 @@ stellar_mass_passive_fraction_100:
   metadata:
     title: Passive Fraction - Stellar Mass (100 kpc)
     caption: A galaxy is determined as being passive if it has a sSFR below 0.01 / Gyr.
+    section: Star Formation Rates
+  observational_data:
+    - filename: GalaxyStellarMassPassiveFraction/Gilbank2010.hdf5
+    - filename: GalaxyStellarMassPassiveFraction/Moustakas2013.hdf5
+    - filename: GalaxyStellarMassPassiveFraction/Behroozi2019.hdf5
+      
+stellar_mass_passive_fraction_centrals_30:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "lower left"
+  redshift_loc: "upper center"
+  x:
+    quantity: "apertures.mass_star_30_kpc"
+    units: solar_mass
+    start: 1e7
+    end: 1e12
+  y:
+    quantity: "derived_quantities.is_passive_30_kpc"
+    units: "dimensionless"
+    log: false
+    start: 0
+    end: 1
+  mean:
+    plot: true
+    log: true
+    scatter: "none"
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e9
+      units: solar_mass
+    end:
+      value: 1e13
+      units: solar_mass
+  metadata:
+    title: Passive Fraction - Stellar Mass (30 kpc aperture, centrals)
+    caption: A galaxy is determined as being passive if it has a sSFR below 0.01 / Gyr. This figure shows only the central galaxies (structure type 10).
+    section: Star Formation Rates
+    show_on_webpage: false
+  observational_data:
+    - filename: GalaxyStellarMassPassiveFraction/Gilbank2010.hdf5
+    - filename: GalaxyStellarMassPassiveFraction/Moustakas2013.hdf5
+    - filename: GalaxyStellarMassPassiveFraction/Behroozi2019.hdf5
+
+stellar_mass_passive_fraction_centrals_100:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "lower left"
+  redshift_loc: "upper center"
+  x:
+    quantity: "apertures.mass_star_100_kpc"
+    units: solar_mass
+    start: 1e7
+    end: 1e12
+  y:
+    quantity: "derived_quantities.is_passive_100_kpc"
+    units: "dimensionless"
+    log: false
+    start: 0
+    end: 1
+  mean:
+    plot: true
+    log: true
+    scatter: "none"
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 1e9
+      units: solar_mass
+    end:
+      value: 1e13
+      units: solar_mass
+  metadata:
+    title: Passive Fraction - Stellar Mass (100 kpc aperture, centrals)
+    caption: A galaxy is determined as being passive if it has a sSFR below 0.01 / Gyr. This figure shows only the central galaxies (structure type 10).
     section: Star Formation Rates
   observational_data:
     - filename: GalaxyStellarMassPassiveFraction/Gilbank2010.hdf5
@@ -369,6 +456,7 @@ star_formation_rate_function_30:
     title: Star Formation Rate Function (30 kpc aperture)
     caption: 30 kpc aperture galaxy star formation rate function, showing all galaxies with a fixed bin-width of 0.2 dex.
     section: Star Formation Rates
+    show_on_webpage: false
   observational_data:
     - filename: StarFormationRateFunction/Bell2007.hdf5
 
@@ -409,6 +497,7 @@ adaptive_star_formation_rate_function_30:
     title: Star Formation Rate Function (30 kpc aperture)
     caption: 30 kpc aperture galaxy star formation rate function, showing all galaxies with an adaptive bin-width
     section: Star Formation Rates
+    show_on_webpage: false
   observational_data:
     - filename: StarFormationRateFunction/Bell2007.hdf5
 
