Undo unwanted change

--- a/eagle-xl/auto_plotter/star_formation_rates.yml
+++ b/eagle-xl/auto_plotter/star_formation_rates.yml
@@ -197,6 +197,9 @@ stellar_mass_specific_sfr_30:
     end:
       value: 1e12
       units: solar_mass
+    lower:
+      value: 1.01e-11
+      units: 1 / year
   metadata:
     title: Specific Star Formation Rate - Stellar Mass (30 kpc)
     caption: All galaxies are included in the median line.
