--- a/colibre-zooms/config.yml
+++ b/colibre-zooms/config.yml
@@ -8,6 +8,7 @@
 # used in the autoplotter.
 auto_plotter_directory: auto_plotter
 auto_plotter_registration: registration.py
+# Mask designed to filter out zoom halos polluted by interloper background particles
 auto_plotter_global_mask: derived_quantities.low_interloper_halos
 
 # Location of the 'observational data' repository and its compiled
