--- a/colibre/auto_plotter/black_holes.yml
+++ b/colibre/auto_plotter/black_holes.yml
@@ -154,7 +154,7 @@ stellar_veldisp_black_hole_mass_30:
       value: 1e3
       units: km/s
   metadata:
-    title: Stellar Velocity Dispersion-Black Hole Mass relation (30 kpc)
+    title: LOS Stellar Velocity Dispersion-Black Hole Mass relation (30 kpc)
     caption: The 3D stellar velocity dispersion is converted into a LOS velocity dispersion using a $1/\sqrt{3}$ correction factor. Note that the stellar velocity dispersion in observations is measured in a fixed 1 kpc aperture.
     section: Black Holes
     show_on_webpage: false
@@ -186,7 +186,7 @@ stellar_mass_stellar_veldisp_10:
       value: 1e12
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Stellar Velocity Dispersion relation (10 kpc)
+    title: Stellar Mass-LOS Stellar Velocity Dispersion relation (10 kpc)
     caption: The 3D stellar velocity dispersion is converted into a LOS velocity dispersion using a $1/\sqrt{3}$ correction factor.
     section: Black Holes
     show_on_webpage: true
