--- a/colibre-zooms/auto_plotter/black_holes.yml
+++ b/colibre-zooms/auto_plotter/black_holes.yml
@@ -101,7 +101,7 @@ stellar_veldisp_black_hole_mass_10:
   type: "scatter"
   legend_loc: "upper left"
   x:
-    quantity: "apertures.veldisp_star_10_kpc"
+    quantity: "derived_quantities.los_veldisp_star_10_kpc"
     units: km/s
     start: 1e1
     end: 1e3
@@ -122,8 +122,8 @@ stellar_veldisp_black_hole_mass_10:
       value: 1e3
       units: km/s
   metadata:
-    title: Stellar Velocity Dispersion-Black Hole Mass relation (10 kpc)
-    caption: Note that the stellar velocity dispersion is measured in observations in a fixed 1 kpc aperture
+    title: LOS Stellar Velocity Dispersion-Black Hole Mass relation (10 kpc)
+    caption: The 3D stellar velocity dispersion is converted into a LOS velocity dispersion using a $1/\sqrt{3}$ correction factor. Note that the stellar velocity dispersion is measured in observations in a fixed 1 kpc aperture
     section: Black Holes
   observational_data:
     - filename: StellarVelocityDispersionBlackHoleMass/Sahu2019.hdf5
@@ -133,7 +133,7 @@ stellar_veldisp_black_hole_mass_30:
   type: "scatter"
   legend_loc: "upper left"
   x:
-    quantity: "apertures.veldisp_star_30_kpc"
+    quantity: "derived_quantities.los_veldisp_star_30_kpc"
     units: km/s
     start: 10
     end: 1e3
@@ -154,9 +154,39 @@ stellar_veldisp_black_hole_mass_30:
       value: 1e3
       units: km/s
   metadata:
-    title: Stellar Velocity Dispersion-Black Hole Mass relation (30 kpc)
-    caption: Note that the stellar velocity dispersion is measured in observations in a fixed 1 kpc aperture
+    title: LOS Stellar Velocity Dispersion-Black Hole Mass relation (30 kpc)
+    caption: The 3D stellar velocity dispersion is converted into a LOS velocity dispersion using a $1/\sqrt{3}$ correction factor. Note that the stellar velocity dispersion is measured in observations in a fixed 1 kpc aperture
     section: Black Holes
     show_on_webpage: false
   observational_data:
     - filename: StellarVelocityDispersionBlackHoleMass/Sahu2019.hdf5
+
+stellar_mass_stellar_veldisp_10:
+  type: "scatter"
+  legend_loc: "upper left"
+  x:
+    quantity: "apertures.mass_star_10_kpc"
+    units: Solar_Mass
+    start: 1e7
+    end: 1e12
+  y:
+    quantity: "derived_quantities.los_veldisp_star_10_kpc"
+    units: km/s
+    start: 10
+    end: 1e3
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 10
+    start:
+      value: 1e7
+      units: Solar_Mass
+    end:
+      value: 1e12
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-LOS Stellar Velocity Dispersion relation (10 kpc)
+    caption: The 3D stellar velocity dispersion is converted into a LOS velocity dispersion using a $1/\sqrt{3}$ correction factor.
+    section: Black Holes
+    show_on_webpage: true
