--- a/flamingo/auto_plotter/stellar_mass_halo_mass.yml
+++ b/flamingo/auto_plotter/stellar_mass_halo_mass.yml
@@ -5,11 +5,11 @@ stellar_mass_halo_mass_all_100:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
     start: 3e10
-    end: 3e14
+    end: 3e15
   y:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   median:
     plot: true
@@ -19,7 +19,7 @@ stellar_mass_halo_mass_all_100:
       value: 3e10
       units: Solar_Mass
     end:
-      value: 3e14
+      value: 3e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (100 kpc aperture)
@@ -38,11 +38,11 @@ stellar_mass_halo_mass_centrals_100:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
     start: 3e10
-    end: 3e14
+    end: 3e15
   y:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   median:
     plot: true
@@ -52,7 +52,7 @@ stellar_mass_halo_mass_centrals_100:
       value: 3e10
       units: Solar_Mass
     end:
-      value: 3e14
+      value: 3e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (100 kpc aperture, centrals only)
@@ -71,7 +71,7 @@ stellar_mass_halo_mass_centrals_ratio_100:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
     start: 3e10
-    end: 3e14
+    end: 3e15
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_100_kpc"
     units: "dimensionless"
@@ -85,7 +85,7 @@ stellar_mass_halo_mass_centrals_ratio_100:
       value: 3e10
       units: Solar_Mass
     end:
-      value: 3e14
+      value: 3e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, centrals only)
@@ -103,7 +103,7 @@ stellar_mass_halo_mass_centrals_ratio_stellar_100:
   x:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_100_kpc"
@@ -115,13 +115,143 @@ stellar_mass_halo_mass_centrals_ratio_stellar_100:
     log: true
     number_of_bins: 25
     start:
-      value: 1e9
+      value: 1e8
       units: Solar_Mass
     end:
       value: 1e13
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, centrals only, stellar x-axis)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Moster2013RatioStellar.hdf5
+    - filename: GalaxyStellarMassHaloMass/Behroozi2013RatioStellar.hdf5
+
+stellar_mass_halo_mass_all_50:
+  type: "2dhistogram"
+  legend_loc: "lower right"
+  x:
+    quantity: "masses.mass_200crit"
+    units: Solar_Mass
+    start: 3e10
+    end: 3e15
+  y:
+    quantity: "apertures.mass_star_50_kpc"
+    units: Solar_Mass
+    start: 1e8
+    end: 1e13
+  median:
+    plot: true
+    log: true
+    number_of_bins: 25
+    start:
+      value: 3e10
+      units: Solar_Mass
+    end:
+      value: 3e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (50 kpc aperture)
+    caption: Includes all haloes, including subhaloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
+    - filename: GalaxyStellarMassHaloMass/Behroozi2013.hdf5
+
+stellar_mass_halo_mass_centrals_50:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "lower right"
+  x:
+    quantity: "masses.mass_200crit"
+    units: Solar_Mass
+    start: 3e10
+    end: 3e15
+  y:
+    quantity: "apertures.mass_star_50_kpc"
+    units: Solar_Mass
+    start: 1e8
+    end: 1e13
+  median:
+    plot: true
+    log: true
+    number_of_bins: 25
+    start:
+      value: 3e10
+      units: Solar_Mass
+    end:
+      value: 3e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (50 kpc aperture, centrals only)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
+    - filename: GalaxyStellarMassHaloMass/Behroozi2013.hdf5
+
+stellar_mass_halo_mass_centrals_ratio_50:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "lower right"
+  x:
+    quantity: "masses.mass_200crit"
+    units: Solar_Mass
+    start: 3e10
+    end: 3e15
+  y:
+    quantity: "derived_quantities.stellar_mass_to_halo_mass_50_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    number_of_bins: 25
+    start:
+      value: 3e10
+      units: Solar_Mass
+    end:
+      value: 3e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (ratio, 50 kpc aperture, centrals only)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Moster2013Ratio.hdf5
+    - filename: GalaxyStellarMassHaloMass/Behroozi2013Ratio.hdf5
+
+stellar_mass_halo_mass_centrals_ratio_stellar_50:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "lower left"
+  x:
+    quantity: "apertures.mass_star_50_kpc"
+    units: Solar_Mass
+    start: 1e8
+    end: 1e13
+  y:
+    quantity: "derived_quantities.stellar_mass_to_halo_mass_50_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    number_of_bins: 25
+    start:
+      value: 1e8
+      units: Solar_Mass
+    end:
+      value: 1e13
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (ratio, 50 kpc aperture, centrals only, stellar x-axis)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
   observational_data:
@@ -135,12 +265,12 @@ stellar_mass_halo_mass_all_30:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
     start: 3e10
-    end: 3e14
+    end: 3e15
   y:
     quantity: "apertures.mass_star_30_kpc"
     units: Solar_Mass
-    start: 1e6
-    end: 1e12
+    start: 1e8
+    end: 1e13
   median:
     plot: true
     log: true
@@ -149,7 +279,7 @@ stellar_mass_halo_mass_all_30:
       value: 3e10
       units: Solar_Mass
     end:
-      value: 1e14
+      value: 3e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (30 kpc aperture)
@@ -169,12 +299,12 @@ stellar_mass_halo_mass_centrals_30:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
     start: 3e10
-    end: 3e14
+    end: 3e15
   y:
     quantity: "apertures.mass_star_30_kpc"
     units: Solar_Mass
-    start: 1e6
-    end: 1e12
+    start: 1e8
+    end: 1e13
   median:
     plot: true
     log: true
@@ -183,7 +313,7 @@ stellar_mass_halo_mass_centrals_30:
       value: 3e10
       units: Solar_Mass
     end:
-      value: 1e14
+      value: 3e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (30 kpc aperture, centrals only)
@@ -203,7 +333,7 @@ stellar_mass_halo_mass_centrals_ratio_30:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
     start: 3e10
-    end: 3e14
+    end: 3e15
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_30_kpc"
     units: "dimensionless"
@@ -217,7 +347,7 @@ stellar_mass_halo_mass_centrals_ratio_30:
       value: 3e10
       units: Solar_Mass
     end:
-      value: 1e14
+      value: 3e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (ratio, 30 kpc aperture, centrals only)
@@ -236,7 +366,7 @@ stellar_mass_halo_mass_centrals_ratio_stellar_30:
   x:
     quantity: "apertures.mass_star_30_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_30_kpc"
@@ -248,7 +378,7 @@ stellar_mass_halo_mass_centrals_ratio_stellar_30:
     log: true
     number_of_bins: 25
     start:
-      value: 1e9
+      value: 1e8
       units: Solar_Mass
     end:
       value: 1e13
@@ -273,7 +403,7 @@ stellar_mass_halo_mass_MBN98_all_100:
   y:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   median:
     plot: true
@@ -284,10 +414,42 @@ stellar_mass_halo_mass_MBN98_all_100:
       value: 1e10
       units: Solar_Mass
     end:
-      value: 1e15
+      value: 3e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (100 kpc aperture, M$_{\rm BN98}$)
+    caption: Includes all haloes, including subhaloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
+
+stellar_mass_halo_mass_MBN98_all_50:
+  type: "2dhistogram"
+  legend_loc: "lower right"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 1e10
+    end: 3e15
+  y:
+    quantity: "apertures.mass_star_50_kpc"
+    units: Solar_Mass
+    start: 1e8
+    end: 1e13
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e10
+      units: Solar_Mass
+    end:
+      value: 3e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (50 kpc aperture, M$_{\rm BN98}$)
     caption: Includes all haloes, including subhaloes.
     section: Stellar Mass-Halo Mass
   observational_data:
@@ -301,11 +463,11 @@ stellar_mass_halo_mass_MBN98_all_30:
     quantity: "masses.mass_bn98"
     units: Solar_Mass
     start: 1e10
-    end: 1e15
+    end: 3e15
   y:
     quantity: "apertures.mass_star_30_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   median:
     plot: true
@@ -316,7 +478,7 @@ stellar_mass_halo_mass_MBN98_all_30:
       value: 1e10
       units: Solar_Mass
     end:
-      value: 1e15
+      value: 3e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (30 kpc aperture, M$_{\rm BN98}$)
@@ -335,11 +497,11 @@ stellar_mass_halo_mass_MBN98_centrals_100:
     quantity: "masses.mass_bn98"
     units: Solar_Mass
     start: 1e9
-    end: 3e14
+    end: 3e15
   y:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   median:
     plot: true
@@ -350,7 +512,7 @@ stellar_mass_halo_mass_MBN98_centrals_100:
       value: 1e10
       units: Solar_Mass
     end:
-      value: 1e15
+      value: 3e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (100 kpc aperture, centrals only, M$_{\rm BN98}$)
@@ -359,6 +521,41 @@ stellar_mass_halo_mass_MBN98_centrals_100:
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
     - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
+
+stellar_mass_halo_mass_MBN98_centrals_50:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "lower right"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 1e9
+    end: 3e15
+  y:
+    quantity: "apertures.mass_star_50_kpc"
+    units: Solar_Mass
+    start: 1e8
+    end: 1e13
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e10
+      units: Solar_Mass
+    end:
+      value: 3e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (50 kpc aperture, centrals only, M$_{\rm BN98}$)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
+
 
 stellar_mass_halo_mass_MBN98_centrals_30:
   type: "2dhistogram"
@@ -369,7 +566,7 @@ stellar_mass_halo_mass_MBN98_centrals_30:
     quantity: "masses.mass_bn98"
     units: Solar_Mass
     start: 1e10
-    end: 1e15
+    end: 3e15
   y:
     quantity: "apertures.mass_star_30_kpc"
     units: Solar_Mass
@@ -384,7 +581,7 @@ stellar_mass_halo_mass_MBN98_centrals_30:
       value: 1e10
       units: Solar_Mass
     end:
-      value: 1e15
+      value: 3e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (30 kpc aperture, centrals only, M$_{\rm BN98}$)
@@ -402,7 +599,7 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_100:
   x:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_100_kpc"
@@ -415,13 +612,47 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_100:
     adapive: true
     number_of_bins: 30
     start:
-      value: 1e9
+      value: 1e8
       units: Solar_Mass
     end:
       value: 1e13
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, $M_{\rm BN98}$, centrals only, stellar x-axis)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019RatioStellar.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98_RatioStellar.hdf5
+
+stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_50:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "apertures.mass_star_50_kpc"
+    units: Solar_Mass
+    start: 1e8
+    end: 1e13
+  y:
+    quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_50_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adapive: true
+    number_of_bins: 30
+    start:
+      value: 1e8
+      units: Solar_Mass
+    end:
+      value: 1e13
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (ratio, 50 kpc aperture, $M_{\rm BN98}$, centrals only, stellar x-axis)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
   observational_data:
@@ -436,7 +667,7 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_30:
   x:
     quantity: "apertures.mass_star_30_kpc"
     units: Solar_Mass
-    start: 1e9
+    start: 1e8
     end: 1e13
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_30_kpc"
@@ -449,7 +680,7 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_30:
     adapive: true
     number_of_bins: 30
     start:
-      value: 1e9
+      value: 1e8
       units: Solar_Mass
     end:
       value: 1e13
@@ -471,7 +702,7 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_100:
     quantity: "masses.mass_bn98"
     units: Solar_Mass
     start: 1e10
-    end: 1e15
+    end: 3e15
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_100_kpc"
     units: "dimensionless"
@@ -486,10 +717,44 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_100:
       value: 1e10
       units: Solar_Mass
     end:
-      value: 1e15
+      value: 3e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, $M_{\rm BN98}$, centrals only)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019Ratio.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98_Ratio.hdf5
+
+stellar_mass_halo_mass_MBN98_centrals_ratio_50:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 1e10
+    end: 3e15
+  y:
+    quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_50_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 1e10
+      units: Solar_Mass
+    end:
+      value: 3e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (ratio, 50 kpc aperture, $M_{\rm BN98}$, centrals only)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
   observational_data:
@@ -505,7 +770,7 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_30:
     quantity: "masses.mass_bn98"
     units: Solar_Mass
     start: 1e10
-    end: 1e15
+    end: 3e15
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_30_kpc"
     units: "dimensionless"
@@ -520,7 +785,7 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_30:
       value: 1e10
       units: Solar_Mass
     end:
-      value: 1e15
+      value: 3e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (ratio, 30 kpc aperture, $M_{\rm BN98}$, centrals only)
